--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      <div class="socials">
     <h3>Socials</h3>
     <div class="social-icons">
-      <a href="https://github.com/Nandanigupta239" target="_blank" class="social-link github">GitHub</a>
+      <a href="https://github.com/Nandani-Guptaa" target="_blank" class="social-link github">GitHub</a>
       <a href="https://www.linkedin.com/in/nandaniiguptaa" target="_blank" class="social-link linkedin">LinkedIn</a>
       <a href="https://leetcode.com/u/nandani-gupta" target="_blank" class="social-link leetcode">LeetCode</a>
       <a href="https://www.instagram.com/kashudebugs" target="_blank" class="social-link instagram">Instagram</a>
